--- a/package.json
+++ b/package.json
@@ -21,12 +21,14 @@
   "license": "ISC",
   "dependencies": {
     "sqlite3": "^5.1.7",
-    "ws": "^8.18.3"
+    "ws": "^8.18.3",
+    "sqlite": "^5.1.x" // <--- Also, make sure to install 'sqlite' package!
   },
   "devDependencies": {
     "nodemon": "^3.1.0"
   },
   "engines": {
     "node": ">=14.0.0"
-  }
+  },
+  "type": "module" // <--- ADD THIS LINE
 }
